--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,12 @@
-work/
-db/
-incremental_db/
-output_files/
-simulation/
-*.bak
-*.rpt
-*.qws
-DUTcompilation.do
-DUTsimulation.do
-DUTsimulate.do
-wave.do
-*.mem
-wlft*
-test*
-ArquitecturaHybridARMIPS_assignment_defaults.qdf
-wave.do
-DUTcompile.do
+geva/work/
+geva/db/
+geva/incremental_db/
+geva/output_files/
+geva/simulation/
+geva/*.bak
+geva/*.rpt
+geva/*.qws
+geva/*.mem
+geva/wlft*
+geva/test*
+geva/ArquitecturaHybridARMIPS_assignment_defaults.qdf
