--- a/geva/geva.qsf
+++ b/geva/geva.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY geva
+set_global_assignment -name TOP_LEVEL_ENTITY data_mem_bb
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "23:28:23  OCTOBER 21, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -46,3 +46,23 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE data_mem_bb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE SumadorNbits.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sumador1bit.sv
+set_global_assignment -name QIP_FILE data_mem.qip
+set_location_assignment PIN_AF14 -to clock
+set_location_assignment PIN_V16 -to q_a[0]
+set_location_assignment PIN_W16 -to q_a[1]
+set_location_assignment PIN_V17 -to q_a[2]
+set_location_assignment PIN_V18 -to q_a[3]
+set_location_assignment PIN_W17 -to q_a[4]
+set_location_assignment PIN_W19 -to q_a[5]
+set_location_assignment PIN_Y19 -to q_a[6]
+set_location_assignment PIN_W20 -to q_a[7]
+set_location_assignment PIN_AB12 -to wren_a
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
